--- a/index.html
+++ b/index.html
@@ -1,19 +1,118 @@
 <!DOCTYPE html>
 <html>
-
+  <head>
+    <title>YPAC Medan</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
   <body>
-    <h1> YPAC </h1>
-    <p> Yayasan Pendidikan Anak Cacat </p>
+    <nav class="navMenu">
+      <div>
+        <a href="#"><img src="gambar/ypac_logo2.jpg" alt=""></a>
+      </div>
+      <ul>
+        <a href="#">Beranda</a>
+        <a href="#">Tentang Kami</a>
+        <a href="#">Program Kita</a>
+        <a href="#">Kontak Kami</a>
+      </ul>
+    </nav>
 
-    <h2> Pesan dari kepala sekolah kita </h2>
-    <img src="kepsek.jpeg" width="200px">
-    <p> Halo, nama saya Suratno, ... </p>
+    <div class="gmbrBesar">
+      <img src="gambar/ypac_events1.jpeg" alt="">
+      <div class="gmbrTxt">
+        <h1>YPAC Medan</h1>
+        <br>
+        <h2>Yayasan Pendidikan Anak Cacat</h2>
+      </div>
+    </div>
+    <div class="tentangKami">
+      <div class="kiri">
+        <img src="gambar/kepsek3.jpg">
+      </div>
+      <div class="kanan">
+        <p>Tentang Kami</p>
+        <br>
+        <h2> Pesan dari kepala sekolah kita </h2>
+        <br>
+        <p> "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores</p>
+      </div>
+    </div>
+
+    <div class="program">
+      <div class="kiri">
+        <h2>Pelayanan & Pendidikan Kita</h2>
+        <p>Aliquyam accusam clita nonumy ipsum sit sea clita ipsum clita, ipsum dolores amet voluptua duo dolores et sit ipsum rebum, sadipscing et erat eirmod diam kasd labore clita est. Diam sanctus gubergren sit rebum clita amet.</p>
+        <div class="icon">
+          <img src="" alt="">
+          <h3> Rehabilitasi Pendidikan </h3>
+          <p>Lorem</p>
+        </div>
+        <div class="icon">
+          <img src="" alt="">
+          <h3> Rehabilitasi Medis </h3>
+          <p>Lorem</p>
+        </div>
+        <div class="icon">
+          <img src="" alt="">
+          <h3> Konsultasi </h3>
+          <p>Lorem</p>
+        </div>
+      </div>
+      <div class="kanan">
+        <img src="gambar/ypac_building2.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="testimonial">
+      <div class="kiri">
+        <h3>Testimonial</h3>
+        <p>Apa yang siswa kita mengatakan</p>
+        <p>Dolor est dolores et nonumy sit labore dolores est sed rebum amet, justo duo ipsum sanctus dolore magna rebum sit et. Diam lorem ea sea at. Nonumy et at at sed justo est nonumy tempor. Vero sea ea eirmod, elitr ea amet diam ipsum at amet. Erat sed stet eos ipsum diam</p>
+      </div>
+      <div class="kanan">
+        <div class="testimonialBlock"></div>
+      </div>
+    </div>
+
+    <div class="kontakKami">
+      <div class="kiri">
+        <h3>Kunjungi Kami!</h3>
+        <div class="icon"></div>
+        <div class="icon"></div>
+      </div>
+      <div class="kanan">
+        <p>peta sini</p>
+      </div>
+    </div>
+
+    <footer>
+
+      <div class="footer-content">
+          <h3>Yayasan Pendidikan Anak Cacat</h3>
+          <p>Raj Template is a blog website where you will find great tutorials on web design and development. Here each tutorial is beautifully described step by step with the required source code.</p>
+          <ul class="socials">
+              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+              <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+              <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+          </ul>
+      </div>
+      <div class="footer-bottom">
+        <p>Copyright &copy; YPAC Medan  </p>
+        <div class="footer-menu">
+          <ul class="f-menu">
+            <li><a href="">Beranda</a></li>
+            <li><a href="">Tentang Kami</a></li>
+            <li><a href="">Program Kita</a></li>
+            <li><a href="">Kontak Kami</a></li>
+          </ul>
+        </div>
+      </div>
     
-    <h2> Pelayanan </h2>
-    <p> Rehabilitasi Pendidikan </p>
-    <p> Rehabilitasi Medis </p>
-    <p> Konsultasi </p>
-    
+
+    </footer>
   </body>
 
 </html>
