--- a/index.html
+++ b/index.html
@@ -71,13 +71,26 @@
         <p>Dolor est dolores et nonumy sit labore dolores est sed rebum amet, justo duo ipsum sanctus dolore magna rebum sit et. Diam lorem ea sea at. Nonumy et at at sed justo est nonumy tempor. Vero sea ea eirmod, elitr ea amet diam ipsum at amet. Erat sed stet eos ipsum diam</p>
       </div>
       <div class="kanan">
-        <div class="testimonialBlock"></div>
+        <div class="testimonialBlock">
+          <p>Methew:Saya merasa senang, banyak menemu teman baru, seperti William, Iqbal, Agnes, Ais, Rahel. YPAC lingkunganya bersih, gurunya sangat bagus mengajari murid-muridnya. </p>
+          <p>Nadila: Bisa bermain, banyak kawan, sering tampil di kegiatan</p>
+          <p>iqbal: saya suka ypac karena bisa mendapatkan ilmu dan saya banyak mengikuti lomba saya sudah cukup lama di ypac medan dari tahun 2010</p>
+          <p>m. fikri aulia sitompul : karena banyak teman nabilla . saya mendapatkan ilmu dan saya karena saya sering tampil ketika  ada acara di ypac</p>
+          <p>Hafiz: saya menemukan banyak kawan di ypac, misalynya Alif, Tian, Monang. Bisa belajar komputer, mate. </p> 
+          <p>karena banyak teman, misalnya hafiz, tian, monang, yuni, mulan. Selain itu, pelajaraan komputer dan matematika sangat menarik. Juga ada kesempatan untuk mengikuti lomba, seperti boci.  </p>
+        </div>
       </div>
     </div>
 
     <div class="kontakKami">
       <div class="kiri">
+        <img src="gambar/lokasi.png" width="200px" alt="">
         <h3>Kunjungi Kami!</h3>
+        <p>Jln. Adinegoro no 2 medan </p>
+        <img src="gambar/telepon.jpg" width="200px" alt="">
+        <h2>061 4523015</h2>
+        <img src="gambar/email.png" width="200px" alt="">
+        <h2>ypacmedan2@gmail.com</h2>
         <div class="icon"></div>
         <div class="icon"></div>
       </div>
