--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 <div class="col-lg-5 mb-5 mb-lg-0">
                     <div class="section-title position-relative mb-4">
                         <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Testimoni</h6>
-                        <h1 class="display-4">Siswa Kami Katakan Apa?</h1>
+                        <h1 class="display-4">Kesan Siswa-Siswi Kami</h1>
                     </div>
                     <p class="m-0">
                         Kami senang berbagi perjalanan murid kami setelah bertahun-tahun di YPAC: siapa yang mereka temui, apa yang mereka pelajari, dan bagaimana perasaan mereka tentang YPAC. Berikut ini adalah sorotan dari beberapa siswa-siswi kami...
@@ -503,7 +503,7 @@
                         </div>
                         <div class="bg-white p-5">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>Saya menemukan banyak kawan di YPAC, misalynya Alif, Tian, Monang. Saya suka di sini dan bersemangat belajar subyek komputer dan matematika.</p>
+                            <p>Saya menemukan banyak kawan di YPAC, seperti Alif, Tian, Monang. Saya suka di sini dan bersemangat belajar mata pelajaran komputer dan matematika.</p>
                             <div class="d-flex flex-shrink-0 align-items-center mt-4">
                                 <img class="img-fluid mr-4" src="img/testimonial-2.jpg" alt="">
                                 <div>
