Updated why choose us, index html

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <!-- About End -->
 
 
-    <!-- Feature Start -->
+    <!-- Why choose us -->
     <div class="container-fluid bg-image" style="margin: 40px 0;">
         <div class="container">
             <div class="row">
@@ -184,78 +184,11 @@
             </div>
         </div>
     </div>
-    <!-- Feature Start -->
+    <!-- Why choose us -->
 
-
-    <!-- Courses Start
-    <div class="container-fluid px-0 py-5">
-        <div class="row mx-0 justify-content-center pt-5">
-            <div class="col-lg-6">
-                <div class="section-title text-center position-relative mb-4">
-                    <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Kurrikulum</h6>
-                    <h1 class="display-4">Kurrikulum di YPAC</h1>
-                </div>
-            </div>
-        </div>
-        <div class="container-xxl py-6">
-            <div class="container">
-                <br>
-                <div class="row g-4 justify-content-center">
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="courses-item d-flex flex-column bg-light overflow-hidden h-100">
-                            <div class="text-center p-4 pt-0">
-                                <div class="d-inline-block bg-primary text-white fs-5 py-1 px-4 mb-4">SD</div>
-                                <h5 class="mb-3">Pelajaran</h5>
-                                <p>Test</p>
-                            </div>
-                            <div class="position-relative mt-auto">
-                                <img class="img-fluid" src="img/courses-1.jpg" alt="">
-                                <div class="courses-overlay">
-                                    <a class="btn btn-outline-primary border-2" href="">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="courses-item d-flex flex-column bg-light overflow-hidden h-100">
-                            <div class="text-center p-4 pt-0">
-                                <div class="d-inline-block bg-primary text-white fs-5 py-1 px-4 mb-4">SMP</div>
-                                <h5 class="mb-3">Pelajaran</h5>
-                                <p>Tempor erat elitr rebum at clita dolor diam ipsum sit diam amet diam et eos</p>
-                            </div>
-                            <div class="position-relative mt-auto">
-                                <img class="img-fluid" src="img/courses-2.jpg" alt="">
-                                <div class="courses-overlay">
-                                    <a class="btn btn-outline-primary border-2" href="">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="courses-item d-flex flex-column bg-light overflow-hidden h-100">
-                            <div class="text-center p-4 pt-0">
-                                <div class="d-inline-block bg-primary text-white fs-5 py-1 px-4 mb-4">SMA</div>
-                                <h5 class="mb-3">Pelajaran</h5>
-                                <p>Tempor erat elitr rebum at clita dolor diam ipsum sit diam amet diam et eos</p>
-                            </div>
-                            <div class="position-relative mt-auto">
-                                <img class="img-fluid" src="img/courses-3.jpg" alt="">
-                                <div class="courses-overlay">
-                                    <a class="btn btn-outline-primary border-2" href="">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-    Courses End -->
-    
     <br>
 
-    <!-- Course 2 -->
+    <!-- Kurikulum -->
     <div class="container-fluid py-1">
         <div class="container py-5">
             <div class="section-title text-center position-relative mb-4">
@@ -299,7 +232,7 @@
             </div>
         </div>
     </div>
-    <!-- Course 2 -->
+    <!-- Kurikulum -->
 
     <!-- Acara & Program Start -->
     <div class="container-fluid px-0 py-1">
@@ -416,7 +349,7 @@
 
     <br><br>
 
-    <!-- Team Start -->
+    <!-- Team -->
     <div class="container-fluid py-3">
         <div class="container py-5">
             <div class="section-title text-center position-relative mb-5">
@@ -472,7 +405,7 @@
             </div>
         </div>
     </div>
-    <!-- Team End -->
+    <!-- Team -->
 
 
     <!-- Testimonial Start -->
