--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-lg-7">
                     <div class="section-title position-relative mb-4">
-                        <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Selamat Datang</h6>
+                        <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Selamat Datang!</h6>
                         <h1 class="display-4">Pesan Dari Kepala Sekolah Kami</h1>
                     </div>
                     <p>
