--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                         </div>
                         <div class="bg-white p-5">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>Nama saya Nadila, saya senang ke sekolah setiap hari karena bisa bermain dengan banyak kawan dan saya sering tampil di berbagai kegiatan.</p>
+                            <p>Nama saya Nadila, saya senang ke sekolah setiap hari karena bisa bermain dengan banyak kawan, dan saya sering tampil di berbagai kegiatan.</p>
                             <div class="d-flex flex-shrink-0 align-items-center mt-4">
                                 <img class="img-fluid mr-4" src="img/testimonial-3.jpg" alt="">
                                 <div>
